# project-ia-

./: .gitignore  README.md  api.py  build_and_deploy.bat  debug_recommendations.py  deploy-to-server.bat  fix_server.sh  package-lock.json  reset_database.py  test_api.py  test_imports.py  test_recommendations_local.py  vercel.json
backend/: AUTH_README.md  __init__.py  api.py  app.py  config.py  deploy-ubuntu.sh  flask_api.py  gunicorn.conf.py  main.py  migrate_users.py  models.py  pyproject.toml  requirements.txt  restore_users.py  setup_email.py  start.bat  start.sh  start_backend_only.bat  start_backend_only.sh  start_email_server.py  start_production.bat  start_production.sh  test_auth.py  test_debug_recommendations.py  test_email_auth.py  test_modular_system.py  test_multi_api.py  test_nathan_login.json  test_recommendations_simple.py  test_register.json  transfer-to-server.bat  whattowatch-backend.service  wsgi.py
backend/api/: admin.py  models.py
backend/api/migrations/: 0001_initial.py
backend/backend/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/data/: __init__.py  movies_series_database.py  user_database.py  users.json
backend/src/: api.py  auth.py  auth_routes.py  email_service.py  middleware.py  multi_api_manager.py  recommendation_engine.py  recommendation_engine_v2.py  recommendation_scoring.py  recommendation_utils.py
backend/src/api_providers/: __init__.py  multi_api_manager.py  tmdb_provider.py  watchmode_provider.py
backend/tests/: test_recommendation.py
data/: user_database.py  users.json  users.json.backup
(+25 files in other folders)
